# cloudgrep

./: .gitignore  Dockerfile  README.md  cloudgrep.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: app-ci.yml
ci/: black.toml  flake8.cfg  mypy.cfg
cloudgrep/: __main__.py  cloud.py  cloudgrep.py  search.py
cloudgrep/tests/: test_unit.py
core/: cloudgrep.py  queries.txt
release/: generate_linux_binary.sh  generate_osx_binary.sh  generate_windows_binary.bat
tests/: test_unit.py  tests_unit.py
tests/data/: 000000  UTF-8-Test.txt  UTF-8-test_filename_ŀĔ_TH̘Ë͖́̉ ͠P̯͍̭O̚​N̐Y̡ H̸̡̪̯ͨ͊̽̅̾̎Ȩ̬̩̾͛ͪ̈́̀́͘ ̶̧̨̱̹̭̯ͧ̾ͬC̷̙̲̝͖ͭ̏ͥͮ͟Oͮ͏̮̪̝͍M̲̖͊̒ͪͩͬ̚̚͜Ȇ̴̟̟͙̞ͩ͌͝S̨̥̫͎̭ͯ̿̔̀ͅ.txt  azure.json  bad_azure.json  bad_cloudtrail.json  cloudtrail.json  cloudtrail_singleline.json  yara.rule
