[metadata]
name = cloudgrep
description = cloudgrep: searches cloud storage.
version = 1.0.5
long_description = file: README.md
long_description_content_type = text/x-rst
author = Cado Security and Contributors
license = Apache License
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
packages =
    cloudgrep
install_requires =
    botocore==1.24.46
    boto3==1.21.24
    boto3-stubs==1.20.49
    python-dateutil==2.8.1
    types-python-dateutil==2.8.13
    pytest==7.2.0
    moto==4.2.2
    timeout-decorator==0.5.0
    black==23.9.1
    pip-audit==2.6.1
    azure-storage-blob==12.18.3
    azure-core==1.29.4
    azure-identity==1.14.1
    google-cloud-storage==2.12.0
python_requires = >=3.8
zip_safe = ye

[options.entry_points]
console_scripts =
    cloudgrep=cloudgrep.__main__:main

[options.extras_require]
testing =
    pytest==7.2.0


[devpi:upload]
formats = sdist.tgz,bdist_wheel
